a2/kmeans/make_kmeans.err
omp_reduction_kmeans_fs.c: In function 'kmeans':
omp_reduction_kmeans_fs.c:78:96: error: expected ')' before ';' token
     #define PADDING_INT (numClusters/(CACHE_LINE_SIZE/sizeof(int))+1)*sizeof(int) - numClusters;
                                                                                                ^
omp_reduction_kmeans_fs.c:95:82: note: in expansion of macro 'PADDING_INT'
     local_newClusterSize[k] = (typeof(*local_newClusterSize)) calloc(numClusters+PADDING_INT, sizeof(**local_newClusterSize));
                                                                                  ^
omp_reduction_kmeans_fs.c:95:63: error: too few arguments to function 'calloc'
     local_newClusterSize[k] = (typeof(*local_newClusterSize)) calloc(numClusters+PADDING_INT, sizeof(**local_newClusterSize));
                                                               ^
omp_reduction_kmeans_fs.c:79:127: error: expected ')' before ';' token
     #define PADDING_DOUBLE ((numClusters*numCoords)/(CACHE_LINE_SIZE/sizeof(double))+1)*sizeof(double) - numClusters*numCoords;
                                                                                                                               ^
omp_reduction_kmeans_fs.c:97:86: note: in expansion of macro 'PADDING_DOUBLE'
     local_newClusters[k] = (typeof(*local_newClusters)) calloc(numClusters*numCoords+PADDING_DOUBLE, sizeof(**local_newClusters));
                                                                                      ^
omp_reduction_kmeans_fs.c:97:57: error: too few arguments to function 'calloc'
     local_newClusters[k] = (typeof(*local_newClusters)) calloc(numClusters*numCoords+PADDING_DOUBLE, sizeof(**local_newClusters));
                                                         ^
make: *** [omp_reduction_kmeans_fs.o] Error 1
